timespec/y.output

state 0
	$accept: .timespec $end 

	ORDINAL  shift 11
	DAILY  shift 6
	WEEKLY  shift 8
	MONTHLY  shift 10
	EVERYDAY  shift 7
	SUNDAY  shift 12
	MONDAY  shift 13
	TUESDAY  shift 14
	WEDNESDAY  shift 15
	THURSDAY  shift 16
	FRIDAY  shift 17
	SATURDAY  shift 18
	.  error

	day_name  goto 9
	spec  goto 2
	daily_spec  goto 3
	weekly_spec  goto 4
	monthly_spec  goto 5
	timespec  goto 1

state 1
	$accept:  timespec.$end 

	$end  accept
	.  error


state 2
	timespec:  spec.    (1)

	.  reduce 1 (src line 80)


state 3
	spec:  daily_spec.    (2)

	.  reduce 2 (src line 85)


state 4
	spec:  weekly_spec.    (3)

	.  reduce 3 (src line 85)


state 5
	spec:  monthly_spec.    (4)

	.  reduce 4 (src line 85)


state 6
	daily_spec:  DAILY.AT time_in_HHMM 
	daily_spec:  DAILY.time_in_HHMM 

	NUMBER  shift 21
	AT  shift 19
	.  error

	time_in_HHMM  goto 20

state 7
	daily_spec:  EVERYDAY.AT time_in_HHMM 
	daily_spec:  EVERYDAY.time_in_HHMM 

	NUMBER  shift 21
	AT  shift 22
	.  error

	time_in_HHMM  goto 23

state 8
	weekly_spec:  WEEKLY.AT time_in_HHMM ON day_name 
	weekly_spec:  WEEKLY.time_in_HHMM ON day_name 
	weekly_spec:  WEEKLY.AT time_in_HHMM day_name 
	weekly_spec:  WEEKLY.time_in_HHMM day_name 

	NUMBER  shift 21
	AT  shift 24
	.  error

	time_in_HHMM  goto 25

state 9
	weekly_spec:  day_name.AT time_in_HHMM 
	weekly_spec:  day_name.time_in_HHMM 

	NUMBER  shift 21
	AT  shift 26
	.  error

	time_in_HHMM  goto 27

state 10
	monthly_spec:  MONTHLY.AT time_in_HHMM ON month_day 
	monthly_spec:  MONTHLY.time_in_HHMM ON month_day 
	monthly_spec:  MONTHLY.AT time_in_HHMM month_day 
	monthly_spec:  MONTHLY.time_in_HHMM month_day 

	NUMBER  shift 21
	AT  shift 28
	.  error

	time_in_HHMM  goto 29

state 11
	monthly_spec:  ORDINAL.day_name AT time_in_HHMM 
	monthly_spec:  ORDINAL.day_name time_in_HHMM 

	SUNDAY  shift 12
	MONDAY  shift 13
	TUESDAY  shift 14
	WEDNESDAY  shift 15
	THURSDAY  shift 16
	FRIDAY  shift 17
	SATURDAY  shift 18
	.  error

	day_name  goto 30

state 12
	day_name:  SUNDAY.    (20)

	.  reduce 20 (src line 111)


state 13
	day_name:  MONDAY.    (21)

	.  reduce 21 (src line 112)


state 14
	day_name:  TUESDAY.    (22)

	.  reduce 22 (src line 113)


state 15
	day_name:  WEDNESDAY.    (23)

	.  reduce 23 (src line 114)


state 16
	day_name:  THURSDAY.    (24)

	.  reduce 24 (src line 115)


state 17
	day_name:  FRIDAY.    (25)

	.  reduce 25 (src line 116)


state 18
	day_name:  SATURDAY.    (26)

	.  reduce 26 (src line 117)


state 19
	daily_spec:  DAILY AT.time_in_HHMM 

	NUMBER  shift 21
	.  error

	time_in_HHMM  goto 31

state 20
	daily_spec:  DAILY time_in_HHMM.    (6)

	.  reduce 6 (src line 89)


state 21
	time_in_HHMM:  NUMBER.':' NUMBER 
	time_in_HHMM:  NUMBER.':' NUMBER am_or_pm 
	time_in_HHMM:  NUMBER.am_or_pm 

	AM  shift 34
	PM  shift 35
	':'  shift 32
	.  error

	am_or_pm  goto 33

state 22
	daily_spec:  EVERYDAY AT.time_in_HHMM 

	NUMBER  shift 21
	.  error

	time_in_HHMM  goto 36

state 23
	daily_spec:  EVERYDAY time_in_HHMM.    (8)

	.  reduce 8 (src line 91)


state 24
	weekly_spec:  WEEKLY AT.time_in_HHMM ON day_name 
	weekly_spec:  WEEKLY AT.time_in_HHMM day_name 

	NUMBER  shift 21
	.  error

	time_in_HHMM  goto 37

state 25
	weekly_spec:  WEEKLY time_in_HHMM.ON day_name 
	weekly_spec:  WEEKLY time_in_HHMM.day_name 

	ON  shift 38
	SUNDAY  shift 12
	MONDAY  shift 13
	TUESDAY  shift 14
	WEDNESDAY  shift 15
	THURSDAY  shift 16
	FRIDAY  shift 17
	SATURDAY  shift 18
	.  error

	day_name  goto 39

state 26
	weekly_spec:  day_name AT.time_in_HHMM 

	NUMBER  shift 21
	.  error

	time_in_HHMM  goto 40

state 27
	weekly_spec:  day_name time_in_HHMM.    (17)

	.  reduce 17 (src line 104)


state 28
	monthly_spec:  MONTHLY AT.time_in_HHMM ON month_day 
	monthly_spec:  MONTHLY AT.time_in_HHMM month_day 

	NUMBER  shift 21
	.  error

	time_in_HHMM  goto 41

state 29
	monthly_spec:  MONTHLY time_in_HHMM.ON month_day 
	monthly_spec:  MONTHLY time_in_HHMM.month_day 

	NUMBER  shift 45
	ORDINAL  shift 44
	ON  shift 42
	.  error

	month_day  goto 43

state 30
	monthly_spec:  ORDINAL day_name.AT time_in_HHMM 
	monthly_spec:  ORDINAL day_name.time_in_HHMM 

	NUMBER  shift 21
	AT  shift 46
	.  error

	time_in_HHMM  goto 47

state 31
	daily_spec:  DAILY AT time_in_HHMM.    (5)

	.  reduce 5 (src line 88)


state 32
	time_in_HHMM:  NUMBER ':'.NUMBER 
	time_in_HHMM:  NUMBER ':'.NUMBER am_or_pm 

	NUMBER  shift 48
	.  error


state 33
	time_in_HHMM:  NUMBER am_or_pm.    (11)

	.  reduce 11 (src line 96)


state 34
	am_or_pm:  AM.    (18)

	.  reduce 18 (src line 107)


state 35
	am_or_pm:  PM.    (19)

	.  reduce 19 (src line 108)


state 36
	daily_spec:  EVERYDAY AT time_in_HHMM.    (7)

	.  reduce 7 (src line 90)


state 37
	weekly_spec:  WEEKLY AT time_in_HHMM.ON day_name 
	weekly_spec:  WEEKLY AT time_in_HHMM.day_name 

	ON  shift 49
	SUNDAY  shift 12
	MONDAY  shift 13
	TUESDAY  shift 14
	WEDNESDAY  shift 15
	THURSDAY  shift 16
	FRIDAY  shift 17
	SATURDAY  shift 18
	.  error

	day_name  goto 50

state 38
	weekly_spec:  WEEKLY time_in_HHMM ON.day_name 

	SUNDAY  shift 12
	MONDAY  shift 13
	TUESDAY  shift 14
	WEDNESDAY  shift 15
	THURSDAY  shift 16
	FRIDAY  shift 17
	SATURDAY  shift 18
	.  error

	day_name  goto 51

state 39
	weekly_spec:  WEEKLY time_in_HHMM day_name.    (15)

	.  reduce 15 (src line 102)


state 40
	weekly_spec:  day_name AT time_in_HHMM.    (16)

	.  reduce 16 (src line 103)


state 41
	monthly_spec:  MONTHLY AT time_in_HHMM.ON month_day 
	monthly_spec:  MONTHLY AT time_in_HHMM.month_day 

	NUMBER  shift 45
	ORDINAL  shift 44
	ON  shift 52
	.  error

	month_day  goto 53

state 42
	monthly_spec:  MONTHLY time_in_HHMM ON.month_day 

	NUMBER  shift 45
	ORDINAL  shift 44
	.  error

	month_day  goto 54

state 43
	monthly_spec:  MONTHLY time_in_HHMM month_day.    (30)

	.  reduce 30 (src line 123)


state 44
	month_day:  ORDINAL.    (33)

	.  reduce 33 (src line 128)


state 45
	month_day:  NUMBER.    (34)

	.  reduce 34 (src line 129)


state 46
	monthly_spec:  ORDINAL day_name AT.time_in_HHMM 

	NUMBER  shift 21
	.  error

	time_in_HHMM  goto 55

state 47
	monthly_spec:  ORDINAL day_name time_in_HHMM.    (32)

	.  reduce 32 (src line 125)


state 48
	time_in_HHMM:  NUMBER ':' NUMBER.    (9)
	time_in_HHMM:  NUMBER ':' NUMBER.am_or_pm 

	AM  shift 34
	PM  shift 35
	.  reduce 9 (src line 94)

	am_or_pm  goto 56

state 49
	weekly_spec:  WEEKLY AT time_in_HHMM ON.day_name 

	SUNDAY  shift 12
	MONDAY  shift 13
	TUESDAY  shift 14
	WEDNESDAY  shift 15
	THURSDAY  shift 16
	FRIDAY  shift 17
	SATURDAY  shift 18
	.  error

	day_name  goto 57

state 50
	weekly_spec:  WEEKLY AT time_in_HHMM day_name.    (14)

	.  reduce 14 (src line 101)


state 51
	weekly_spec:  WEEKLY time_in_HHMM ON day_name.    (13)

	.  reduce 13 (src line 100)


state 52
	monthly_spec:  MONTHLY AT time_in_HHMM ON.month_day 

	NUMBER  shift 45
	ORDINAL  shift 44
	.  error

	month_day  goto 58

state 53
	monthly_spec:  MONTHLY AT time_in_HHMM month_day.    (29)

	.  reduce 29 (src line 122)


state 54
	monthly_spec:  MONTHLY time_in_HHMM ON month_day.    (28)

	.  reduce 28 (src line 121)


state 55
	monthly_spec:  ORDINAL day_name AT time_in_HHMM.    (31)

	.  reduce 31 (src line 124)


state 56
	time_in_HHMM:  NUMBER ':' NUMBER am_or_pm.    (10)

	.  reduce 10 (src line 95)


state 57
	weekly_spec:  WEEKLY AT time_in_HHMM ON day_name.    (12)

	.  reduce 12 (src line 99)


state 58
	monthly_spec:  MONTHLY AT time_in_HHMM ON month_day.    (27)

	.  reduce 27 (src line 120)


21 terminals, 10 nonterminals
35 grammar rules, 59/2000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
59 working sets used
memory: parser 28/30000
7 extra closures
83 shift entries, 1 exceptions
29 goto entries
0 entries saved by goto default
Optimizer space used: output 96/30000
96 table entries, 5 zero
maximum spread: 21, maximum offset: 52
